[java] Fixing java 8 compatibility issues